@@ -2,7 +2,7 @@ package com.github.romualdrousseau.shuju.util;
 
 import java.util.regex.Pattern;
 
-public class StringUtility {
+public class StringUtils {
     public static final String WHITE_SPACES = "\\s\\u00A0\\u3000";
 
     public static final String WRONG_UNICODE = "\\uFFFD";
@@ -13,16 +13,16 @@ public class StringUtility {
 
     public static final char BOM_CHAR = '\uFEFF';
 
-    public static boolean isEmpty(final String s) {
-        return s == null || StringUtility.trim(s).equals("");
+    public static boolean isBLank(final String s) {
+        return s == null || StringUtils.trim(s).equals("");
     }
 
-    public static boolean isFastEmpty(final String s) {
-        return s == null || s.trim().isEmpty();
+    public static boolean isFastBlank(final String s) {
+        return s == null || s.isBlank();
     }
 
     public static String trim(final String s) {
-        return trim(s, StringUtility.WHITE_SPACES);
+        return trim(s, StringUtils.WHITE_SPACES);
     }
 
     public static String trim(final String s, final String whiteSpaces) {
@@ -33,7 +33,7 @@ public class StringUtility {
     }
 
     public static String normalizeWhiteSpaces(final String s) {
-        return normalizeWhiteSpaces(s, StringUtility.WHITE_SPACES);
+        return normalizeWhiteSpaces(s, StringUtils.WHITE_SPACES);
     }
 
     public static String normalizeWhiteSpaces(final String s, final String whiteSpaces) {
@@ -44,7 +44,7 @@ public class StringUtility {
     }
 
     public static String removeWhiteSpaces(final String s) {
-        return removeWhiteSpaces(s, StringUtility.WHITE_SPACES);
+        return removeWhiteSpaces(s, StringUtils.WHITE_SPACES);
     }
 
     public static String removeWhiteSpaces(final String s, final String whiteSpaces) {
@@ -55,7 +55,7 @@ public class StringUtility {
     }
 
     public static String singleWhiteSpaces(final String s) {
-        return singleWhiteSpaces(s, StringUtility.WHITE_SPACES);
+        return singleWhiteSpaces(s, StringUtils.WHITE_SPACES);
     }
 
     public static String singleWhiteSpaces(final String s, final String whiteSpaces) {
@@ -69,26 +69,26 @@ public class StringUtility {
         if (s == null) {
             return false;
         }
-        return !Pattern.compile(StringUtility.WRONG_UNICODE).matcher(s).find();
+        return !Pattern.compile(StringUtils.WRONG_UNICODE).matcher(s).find();
     }
 
     public static String cleanToken(final String s) {
         if (s == null) {
             return null;
         }
-        String ss = StringUtility.normalizeWhiteSpaces(s);
-        ss = StringUtility.singleWhiteSpaces(ss);
-        ss = StringUtility.trim(ss, StringUtility.WHITE_SPACES);
+        String ss = StringUtils.normalizeWhiteSpaces(s);
+        ss = StringUtils.singleWhiteSpaces(ss);
+        ss = StringUtils.trim(ss, StringUtils.WHITE_SPACES);
         if (ss.startsWith("\"") && ss.endsWith("\"")) {
-            ss = StringUtility.trim(ss, StringUtility.WHITE_SPACES + "\"");
+            ss = StringUtils.trim(ss, StringUtils.WHITE_SPACES + "\"");
         }
         return ss;
     }
 
     public static String ensureCamelStyle(final String s) {
-        // Consider _ seprated words instead of space 
-        String ss = StringUtility.cleanToken(s.replaceAll("_", " "));
-        if (StringUtility.isEmpty(ss)) {
+        // Consider _ separated words instead of space 
+        String ss = StringUtils.cleanToken(s.replaceAll("_", " "));
+        if (StringUtils.isBLank(ss)) {
             return "";
         }
 
@@ -117,12 +117,5 @@ public class StringUtility {
         else {
             return Character.toUpperCase(s.charAt(0)) + s.substring(1).toLowerCase();
         }
-    }
-
-    public static String removeExtension(final String fileName) {
-        if (fileName == null) {
-            return null;
-        }
-        return fileName.replaceFirst("[.][^.]+$", "");
     }
 }
